--- a/src/components/Css/Dashboardcss.css
+++ b/src/components/Css/Dashboardcss.css
@@ -45,5 +45,20 @@
   opacity: 2.0;
 }
 
+.logout-button {
+  background-color: #007BFF; /* Cor de fundo vermelha */
+  color: #ffffff; /* Cor do texto branca */
+  padding: 10px 20px; /* Espaçamento interno */
+  border: none; /* Sem borda */
+  border-radius: 5px; /* Cantos arredondados */
+  cursor: pointer; /* Cursor de mão ao passar por cima */
+  font-size: 16px;
+}
 
+.logout-button {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  /* Ajuste os valores conforme necessário para a posição desejada */
+}
 
