--- a/src/components/Css/Login.css
+++ b/src/components/Css/Login.css
@@ -10,7 +10,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('../../assets/Image.jpg');
+    /*background-image: url('../../assets/Image.jpg');*/
     background-size: cover;
     background-position: center;
     opacity: 0.6;
@@ -59,8 +59,3 @@
     color:#000;
     z-index: 1; 
   }
-
-.dark-mode {
-  background-color: #333;
-  color: #fff;
-}
